[package]
name = "learn_v8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
lazy_static = "1.4.0"
once_cell = "1.18.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.103"
serde_v8 = "0.106.0"
v8 = "0.74.3"
